ingress/app_group/picture_backend/picture_backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: picture-backend-service
  namespace: picture-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: picture-backend-deployment
