ingress/app_group/picture_backend/picture_backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-group
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:109412806537:certificate/6f2874c6-4aa0-40d3-a255-868b1f64442e
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: picture-backend-ingress
  namespace: picture-backend
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /picture
        pathType: Prefix
        backend:
          service:
            name: picture-backend-service
            port:
              number: 80
      - path: /pictures
        pathType: Prefix
        backend:
          service:
            name: picture-backend-service
            port:
              number: 80
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: picture-backend-service
            port:
              number: 80
